Added all dependent jars for building the core (rw-core.jar) and program (neoplasm-core.jar). Fixed all warnings.